@@ -20,6 +20,9 @@
 	<LI>HTMLDOC now supports remote book files when running
 	from the command-line.
 
+	<LI>HTMLDOC now supports hexadecimal character constants
+	(&amp;#xFF)
+
 	<H3>Changes</H3>
 
 	<LI>HTMLDOC now calculates the resolution of the body
@@ -57,6 +60,8 @@
 
 	<LI>The MEDIA SIZE comment didn't adjust the printable
 	size for the current landscape setting.
+
+	<LI>HTMLDOC placed the header one line too high.
 
 </UL>
 
